--- a/css/bdp_stylesheet.css
+++ b/css/bdp_stylesheet.css
@@ -62,7 +62,7 @@ strong {
     min-height: 475px;
     opacity: .6;
 }
-bgimg-1, .bgimg-2, .bgimg-3 {
+.bgimg-1, .bgimg-2, .bgimg-3 {
     position: relative;
     opacity: 0.65;
     background-attachment: fixed;
@@ -83,4 +83,7 @@ html {
 }
 h1, h2, h3, h4, h5, h6 {
     text-transform: uppercase;
+}
+a:hover {
+    font-size: 1.1em;
 }
